--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22.13.1
-          cache: pnpm
-      - run: pnpm install
-      - run: pnpm run lint
-      - run: pnpm run build
+          cache: yarn
+      - run: yarn install
+      - run: yarn run lint
+      - run: yarn run build
 
   test:
     runs-on: ubuntu-latest
@@ -36,9 +36,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22.13.1
-          cache: pnpm
-      - run: pnpm install
-      - run: pnpm run test
+          cache: yarn
+      - run: yarn install
+      - run: yarn run test
 
   test-e2e:
     runs-on: ubuntu-latest
@@ -48,6 +48,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22.13.1
-          cache: pnpm
-      - run: pnpm install
-      - run: pnpm run test:e2e
+          cache: yarn
+      - run: yarn install
+      - run: yarn run test:e2e
