--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,37 +17,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node 22.13.1
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22.13.1
-          cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm run lint
-      - run: pnpm run build
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node 22.13.1
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22.13.1
-          cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm run test
+    strategy:
+      matrix:
+        node-version: [22.x]
 
-  test-e2e:
-    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node 22.13.1
-        uses: actions/setup-node@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 22.13.1
-          cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm run test:e2e
+          node-version: ${{ matrix.node-version }}
+      - name: Install Dependencies
+        run: pnpm install     
+      - name: Run Tests
+        run: pnpm test
+        working-directory: src/
