--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,29 @@
-name: pnpm Example Workflow
+name: CI & CD
 on:
-  push:
-
+    push:
+        tags:
+            - v*
 jobs:
-  build:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [22.13.1]
-    steps:
-    - uses: actions/checkout@v4
-    - name: Install pnpm
-      uses: pnpm/action-setup@v4
-      with:
-        version: 10
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
-    - name: Install dependencies
-      run: pnpm install
-    - name: run test
-      run: pnpm run test
-    - name: run lint
-      run: pnpm run lint
+  Build-and-Publish:
+      runs-on: ubuntu-latest
+      permissions:
+          contents: write
+          id-token: write
+      steps:
+        - uses: actions/checkout@v4
+
+        - uses: pnpm/action-setup@v4
+          with:
+              version: 10
+        - uses: actions/setup-node@v4
+          with:
+              node-version: 22.13.1
+              registry-url: https://registry.npmjs.org
+              cache: pnpm
+        - name: Install Dependencies
+          run: pnpm i --frozen-lockfile
+        
+        - name: run test
+          run: pnpm run test
+        - name: run lint
+          run: pnpm run lint
