--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,26 @@
-name: CI & CD
-on:
-    push:
-        tags:
-            - v*
-jobs:
-  Build-and-Publish:
-      runs-on: ubuntu-latest
-      permissions:
-          contents: write
-          id-token: write
-      steps:
-        - uses: actions/checkout@v4
+name: Node.js CI
 
-        - uses: pnpm/action-setup@v4
-          with:
-              version: 10
-        - uses: actions/setup-node@v4
-          with:
-              node-version: 22.13.1
-              registry-url: https://registry.npmjs.org
-              cache: pnpm
-        - name: Install Dependencies
-          run: pnpm i --frozen-lockfile
-        
-        - name: run test
-          run: pnpm run test
-        - name: run lint
-          run: pnpm run lint
+on:
+  push:
+    branches: [ main, dev ]
+  pull_request:
+    branches: [ main, dev ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [22.x]
+       
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm run test
