fix[main]: Update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,39 @@
-name: Node.js CI
-
+name: CI & CD
 on:
-  push:
-    branches: [ main, dev ]
-  pull_request:
-    branches: [ main, dev ]
-
+    push:
+      branches:
+        - main
+        - develop
+    pull_request:
+      branches:
+        - main
+        - develop
+      types:
+        - opened
+        - reopened
+        - synchronize
 jobs:
-  build:
+    Build-and-Publish:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: write
+            id-token: write
+        steps:
+            - uses: actions/checkout@v4
 
-    runs-on: ubuntu-latest
+            - uses: pnpm/action-setup@v4
+              with:
+                  version: 10
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 22
+                  registry-url: https://registry.npmjs.org
+                  cache: pnpm
+            - name: Install Dependencies
+              run: pnpm i --frozen-lockfile
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-       
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test
+            - name: test
+              run: pnpm run test
+              
+            - name: lint
+              run: pnpm run lint
